--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.3",
     "jest": "^29.1.0",
+    "jsdoc": "^4.0.2",
     "lerna": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "peer": "^0.6.1",
