--- a/packages/transport/package.json
+++ b/packages/transport/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "fflate": "^0.7.3",
+    "pbts": "^4.0.1",
     "protobufjs": "^7.2.2",
     "websocket": "^1.0.34"
   },
